# CalibreQuarry

./: .gitignore  CLAUDE.md  README.md  cquarry.py  getBooks.py  patchnotes.md  pyproject.toml  roadmap.md  run_tests.sh  spec.md  test_queries.sh
scripts/: audit_drm.py  audit_epub.py  audit_epub_content.py  audit_epub_emptytext.py  audit_epub_pagenumbers.py  compress_pdf.py  reconcile_file_metadata.py  spot_check.py  taxonomy.example.json  taxonomy.example.yaml  validate_metadata.py
src/cquarry/: __main__.py  cli.py  config.py  db.py  helpers.py  search.py  tui.py
src/cquarry/modes/: analytics.py  audit.py  catalog.py  display.py  export.py  stats.py  tags.py
tests/: test_audit_drm.py  test_helpers.py  test_modes.py  test_reconcile.py  test_scripts.py  test_search.py
