[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cquarry"
version = "3.0.0"
description = "Calibre library toolkit: catalog, stats, audit, export"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
  {name = "vrnvctss"}
]
dependencies = []

[project.scripts]
cquarry = "cquarry.cli:main"
